--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
-.env.production
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
+# .env
+# .env.backup
+# .env.production
+# Homestead.json
+# Homestead.yaml
+# auth.json
+# npm-debug.log
+# yarn-error.log
 /.fleet
 /.idea
 /.vscode
